2002-05-28  Christopher Faylor  <cgf@redhat.com>

	* fhandler_disk_file.cc (fhandler_disk_file::fstat_helper): Properly
	check for whether we should be opening the file to search for #!
	characters.  Set path_conv structure execability, too, when
	appropriate.

2002-05-28  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (set_security_attribute): Call getegid32() instead of
	getegid().
	* include/cygwin/grp.h: Declare getegid32().

2002-05-28  Corinna Vinschen  <corinna@vinschen.de>

	Change internal gid datatype from __gid16_t to __gid32_t
	throughout.
	* cygwin.din: Export new symbols chown32, fchown32, getegid32,
	getgid32, getgrgid32, getgrnam32, getgroups32, initgroups32, lchown32,
	setgid32, setegid32, getgrent32.
	* grp.cc (grp32togrp16): New static function.
	(getgrgid32): New function.
	(getgrnam32): Ditto.
	(getgrent32): Ditto.
	(getgroups32): Change name of internal function from getgroups.
	(getgroups32): New function.
	(initgroups32): Ditto.
	* syscalls.cc (chown32): Ditto.
	(lchown32): Ditto.
	(fchown32): Ditto.
	(setegid32): Ditto.
	(setgid32): Ditto.
	* uinfo.cc (getgid32): Ditto.
	(getegid32): Ditto.
	* include/cygwin/grp.h: Remove declaration of getgrgid() and getgrnam().
	Declare getgrgid32() and getgrnam32() instead.  Declare getgid32().

2002-05-27  Christopher Faylor  <cgf@redhat.com>

	* autoload.cc (noload): Properly mask low order word for determining
	number of bytes to pop.

2002-05-27  Christopher Faylor  <cgf@redhat.com>

	* fhandler_disk_file.cc (fhandler_disk_file::fstat): Minor logic
	cleanup.

2002-05-27  Christopher Faylor  <cgf@redhat.com>

	* autoload.cc (LoadFuncEx): Define via new LoadFuncEx2 macro.
	(LoadFuncEx2): Adapted from LoadFuncEx.  Provides control of return
	value for nonexistent function.
	(NtQueryObject): Declare.
	(IsDebuggerPresent): Declare via LoadFuncEx2 and always return true if
	not available.
	* debug.h (being_debugged): Just rely on IsDebuggerPresent return
	value.